--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -104,6 +104,7 @@ const filterName =
 						<PreviewWidget
 							{...baseProps}
 							bgImage={config.bgImage}
+							bgFillClass={config.bgFillClass}
 							variant={{
 								type: "video",
 								previewVideo: config.previewVideo,
@@ -119,6 +120,7 @@ const filterName =
 						<PreviewWidget
 							{...baseProps}
 							bgImage={config.bgImage}
+							bgFillClass={config.bgFillClass}
 							variant={{
 								type: "image",
 								previewImage: config.previewImage,
@@ -135,6 +137,7 @@ const filterName =
 						<PreviewWidget
 							{...baseProps}
 							bgImage={config.bgImage}
+							bgFillClass={config.bgFillClass}
 							variant={{
 								type: "image-swap",
 								previewImages: config.previewImages,
