Add info sidebar interaction

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -176,3 +176,17 @@ html {
 		color: var(--color-base-50);
 	}
 }
+
+@utility scrollbar-hide {
+	scrollbar-width: none;
+	&::-webkit-scrollbar {
+		display: none;
+	}
+}
+
+@utility scrollbar-default {
+	scrollbar-width: auto;
+	&::-webkit-scrollbar {
+		display: block;
+	}
+}
