--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
-import Header from "../components/nav/header";
+import Header from "@/components/nav/home-header";
 import type { FilterType } from "@/lib/content-types";
 
 interface Props {
