--- a/src/projects/info-modal/info-modal.astro
+++ b/src/projects/info-modal/info-modal.astro
@@ -17,7 +17,7 @@ const lastUpdatedDate =
 const types = entry?.data.types ?? ["interaction"];
 ---
 
-<div class="bg-base-950 @container relative h-full w-full overflow-hidden">
+<div class="@container relative h-full w-full overflow-hidden">
 	<InfoModalComponent
 		client:load
 		title={title}
