Cursor follower support for interactive widgets

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -153,6 +153,9 @@ const filterName =
 							bgFillClass={config.bgFillClass}
 							data-types={dataTypes}
 							style={animationStyle}
+							data-cursor-hover
+							data-cursor-title={item.title}
+							data-cursor-type="interactive"
 						/>
 					);
 				}
