--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -16,7 +16,7 @@ const { title, description } = Astro.props;
 <BaseLayout title={title}>
 	<div class="bg-base-50 flex h-dvh flex-col justify-between">
 		<ProjectHeader
-			client:only="react"
+			client:load
 			projectTitle={title}
 			projectDescription={description}
 		>
