--- a/src/projects/clock-of-clocks/clock-of-clocks.astro
+++ b/src/projects/clock-of-clocks/clock-of-clocks.astro
@@ -1,10 +1,10 @@
 ---
-import Counter from "./counter";
+import BigClock from "./big-clock";
 ---
 
 <div class="flex h-full w-full items-center justify-center">
 	<div class="flex flex-col gap-8">
-		<h2 class="mb-4 text-center text-2xl font-bold">Clock of Clocks Counter</h2>
-		<Counter client:load />
+		<h2 class="mb-4 text-center text-2xl font-bold">Clock of Clocks</h2>
+		<BigClock client:load />
 	</div>
 </div>
