Styling + widget config

--- a/src/projects/clock-of-clocks/clock-of-clocks.astro
+++ b/src/projects/clock-of-clocks/clock-of-clocks.astro
@@ -3,8 +3,7 @@ import BigClock from "./big-clock";
 ---
 
 <div class="flex h-full w-full items-center justify-center">
-	<div class="flex flex-col gap-8">
-		<h2 class="mb-4 text-center text-2xl font-bold">Clock of Clocks</h2>
+	<div class="flex w-[85%] flex-col gap-8">
 		<BigClock client:load />
 	</div>
 </div>
